fix: long title overflowing chart item

--- a/src/style.scss
+++ b/src/style.scss
@@ -111,8 +111,8 @@ img {
 
 /*  Components */
 .chart-item {
-  height: 20vw;
-  max-height: 4rem;
+  height: auto;
+  // max-height: 4rem;
   display: flex;
   align-items: center;
   font-size: var(--fz-sm);
@@ -208,7 +208,6 @@ img {
     flex: 1 1 $mobile;
 
     .chart-item {
-      height: 5vw;
       font-size: 80%;
     }
   }
